--- a/style.css
+++ b/style.css
@@ -61,19 +61,20 @@ footer {
 	margin-top: 150px;
 	padding-top: 50px;
 	text-align: center;
+	color: white;
 }
 
 footer a , footer a:visited {
 	text-decoration: none;
 	text-decoration-style: : none;
 	font-size: 20px;
-	color: white;
+	color: inherit;
 	margin-top: 150px;
 }
 
 footer div {
 	font-size: 12px;
-	color: white;
+	color: inherit;
 }
 
 
